--- a/WebApi/Dockerfile
+++ b/WebApi/Dockerfile
@@ -1,5 +1,22 @@
+#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
- FROM mcr.microsoft.com/dotnet/sdk:3.1
- COPY bin/Debug/netcoreapp3.1/ App/
- WORKDIR /App
- ENTRYPOINT ["dotnet", "aspnetapp.dll"]
+FROM mcr.microsoft.com/dotnet/aspnet:3.1 AS base
+WORKDIR /app
+EXPOSE 5000
+ENV ASPNETCORE_URLS=http://*:5000
+
+FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
+WORKDIR /src
+COPY ["WebApi.csproj", "./"]
+RUN dotnet restore "./WebApi.csproj"
+COPY . .
+WORKDIR "/src/."
+RUN dotnet build "WebApi.csproj" -c Release -o /app/build
+
+FROM build AS publish
+RUN dotnet publish "WebApi.csproj" -c Release -o /app/publish
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
+ENTRYPOINT ["dotnet", "WebApi.dll"]
